# bondi

./: BSD-LICENCE  LICENSE  Makefile  README  README-WIN  README.md  bondi.install  bondi.opam  bondi.tar  dist-sh  dist-win-sh  install-sh  lang-tests-sh  run-tests-sh
doc/: build-sh  lang-spec.tex
lang/: char-relation-ops.bon  client-socket.bon  file.bon  float-functions.bon  float-relation-ops.bon  int-operators.bon  int-relation-ops.bon  literals.bon  shell-actions.bon  string-ops.bon  threaded-server-socket.bon
net/: sockets-server.bon  sockets.bon
prelude/: char_op_syntax.bon  datum2generic.bon  dynamic2static.bon  imperatives_core.bon  prelude.tests.bon  printing.bon  queries.bon  standard_prelude.bon  structure_poly.bon
sample_programs/term_deposits_demo/: bondi
sample_programs/term_deposits_demo/containers/: containers.bon
sample_programs/term_deposits_demo/term_deposits/: bank.xsd  cloud.xml  getting_the_goods.bon  term_deposits.bon
sample_programs/term_deposits_demo/xml/: parser_combinators.bon  xmlparsers.bon
scripts/: configure.in  generate-tests-sh  install-tests.sh  run-tests-sh
src/: .depend  .merlin  bondi.ml  bondi.mli  config.status  configure  configure.in  datum.cmi  datum.cmx  datum.ml  datum.mli  declare.cmi  declare.cmx  declare.ml  declare.mli  dune  environments.cmi  environments.cmx  environments.ml  environments.mli  eval.cmi  eval.cmx  eval.ml  eval.mli  gnu_readline.c  gnu_readline.cmi  gnu_readline.mli  infer.cmi  infer.cmx  infer.ml  infer.mli  initial_ouput  jbuild  lex.cmi  lex.cmx  lex.ml  lex.mli  lex.mll  lex_fish.mli  p_data.cmi  (+22 more)
src/config/: configure
src/config/byte/: cache  config.make  config.ml
src/config/default/: byte  native
src/config/native/: cache  config.cmi  config.cmx  config.make  config.ml  config.mli
src/cygwin/: Makefile.in
src/linux/: Makefile  Makefile.in
src/macos/: Makefile.in
src/solaris/: README
tests/: add_case.bon  add_case.out  basic_tests.bon  basic_tests.out  bon.bon  datum_tests.bon  datum_tests.out  declaration_tests.bon  declaration_tests.out  dynamic2static_tests.bon  dynamic2static_tests.out  dynamic_tests.bon  dynamic_tests.out  errors.bon  fibonacci.bon  imperative_tests.bon  imperative_tests.out  null.out  setPrev.bon  setPrev.out  structure_poly_tests.bon  structure_poly_tests.out
