opam-version: "1.2"
version: "2.09"
maintainer: "barry.jay@uts.edu.au"
authors: ["Barry Jay" "Jose Vergara"]
homepage: "https://github.com/Barry-Jay/bondi"
bug-reports: "https://github.com/Barry-Jay/bondi/issues"
dev-repo: "https://github.com/Barry-Jay/bondi.git"
license: "MIT"

build: [
  ["dune" "subst"] {pinned}
  ["dune" "build" "-p" name "-j" jobs]
]
depends: [
  "dune"                {build & >= "1.5"}
  "base"                {>= "v0.11.1"}
  "base-unix"
]
